fixed spacing in footer

--- a/css/body.css
+++ b/css/body.css
@@ -66,8 +66,8 @@ body {
   }
 }
 
-@media screen and (min-width: 1024px) {
+/* @media screen and (min-width: 1024px) {
   .contentContainer {
-    height: 84vh;
+    height: 82vh;
   }
-}
+} */
